crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_callers.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_callers\")"
---
{
  "name": "get_callers",
  "description": "Find functions that call the given symbol (upstream call chain). `symbol` is a Symbol ID in the `file:name` or `file:Parent::name` format returned by get_file_symbols/search_symbols. Returns the `Page<CallChain>` envelope {results, total, offset, limit, truncated, next_offset}, where each `CallChain` is `{symbol_id, file, line, depth}` and is sorted by (depth, symbol_id) ascending so the closest callers appear first. **CallChain field semantics:** `symbol_id` is the DEFINITION site (the caller being reported, in `file:name`/`file:Parent::name` form); `file` and `line` are the CALL site — the source file and line of the `Calls` edge that reached this hop. At depth 1 the call site lives in the caller's own file by definition; at depth ≥ 2 `file` and the file segment of `symbol_id` routinely diverge across crates (a caller defined in crate `foo` may be reached through a call site that lives in crate `baz`). To recover \"where is this defined?\" split `symbol_id` on the rightmost `:` not part of `::` — do NOT read `file`. **Resolved-only filter (parity with `generate_diagram`):** hops whose target is not a resolved project symbol are dropped at BFS time and never appear — bare-token unresolved callers (e.g. `Ok`, `printf`, `to_string`, language-builtin macros/stdlib calls) are filtered out uniformly across all six languages, so a function whose only incoming callers are unresolved tokens returns an empty page, not a page of bare-token rows. **Non-callable soft-hint (success, not error):** calling `get_callers` on a symbol whose kind is `struct`, `enum`, `trait`, `typedef`, or `interface` returns a `CallToolResult` SUCCESS (`is_error: false`) whose body is a plain-text advisory naming the symbol + kind and routing to `get_class_hierarchy` or `get_symbol_detail` (structural kinds: struct/enum/trait/interface — both tools offered), or to `get_symbol_detail` only (typedef) — NOT the `Page<CallChain>` envelope, so a JSON parse of the body will fail; clients pattern-matching the envelope must try plain-text first. A callable symbol with zero resolved callers still returns the empty `Page<CallChain>` envelope, preserving the trichotomy (wrong symbol → tool error; wrong tool for the kind → soft-hint success; callable with no resolved callers → empty envelope). `depth` defaults to 1 (direct callers only); raise it to walk further upstream. `limit` defaults to 100 (max 1000, clamped silently — the echoed `limit` reflects the resolved value); raise `limit` for hot symbols with high fan-in (e.g. UObject::Serialize), use `offset` to page through the remainder, or narrow by lowering `depth`. `offset` defaults to 0; raise `offset` to skip past previous results, or set `offset = next_offset` to resume. Responses are also capped by `[response].max_bytes` (default 100KB); when either `limit` or the byte budget leaves records un-emitted, `truncated` is true and `next_offset` points at the first un-emitted record — re-call with `offset = next_offset` to resume. `truncated=false` plus `next_offset=null` means the page is complete. `results.length` may be less than `limit` when the byte cap fires, so consult `truncated`, not length, to detect partial pages.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "depth": {
        "default": null,
        "description": "Maximum traversal depth (default 1)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "limit": {
        "default": null,
        "description": "Maximum callers to return per page (default 100, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "min_confidence": {
        "default": null,
        "description": "Minimum resolver confidence required for a hop to appear. \"any\" (default) includes every resolved edge; \"resolved\" drops edges the resolver picked from N same-name candidates (Heuristic) and returns only chains the resolver was sure about. Heuristic edges arise when ≥ 2 symbols share a callee name and the scope rule (same file > same parent > same namespace > global) picked one — useful filter when several unrelated classes have a method with the same name (e.g. `init`). Filter applies at each hop, so a depth-2 walk through a Heuristic intermediate is pruned entirely.",
        "type": [
          "string",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N callers for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "symbol": {
        "description": "Symbol ID in format file:name",
        "type": "string"
      }
    },
    "required": [
      "symbol"
    ],
    "title": "GetCallersArgs",
    "type": "object"
  }
}
