crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_class_hierarchy.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
assertion_line: 91
expression: "tool_entry(\"get_class_hierarchy\")"
---
{
  "name": "get_class_hierarchy",
  "description": "Get the inheritance tree for a class. The tree always walks BOTH directions from the queried class: ancestors (its `bases`, via forward `Inherits` edges) and descendants (its `derived`, via reverse `Inherits` edges). There is no direction argument. Returns the {hierarchy, truncated, max_nodes, total_nodes_seen} envelope: `hierarchy` is the `HierarchyNode` tree rooted at the queried class; `truncated: true` flags that the `max_nodes` budget cut off children — raise `max_nodes` (≤ 1000) to lift the budget, or lower `depth` to request a smaller tree that fits the current budget; `total_nodes_seen` is the count of UNIQUE class names walked — a diamond ancestor reachable via N arms counts as 1, not N, so this can be far smaller than the number of nodes rendered when ref-stubs are present. Args: `class` (required, exact name). `depth` (default 1 = direct bases/derived only; 0 or omitted resolves to 1) bounds transitive traversal. `max_nodes` (default 250, max 1000; values > 1000 clamp to 1000, 0 resolves to the 250 default) bounds unique class names in the tree — 250 fits most hierarchies under the MCP token ceiling, but a single deep tree (e.g. UE's UObject) can exceed it; raise `max_nodes` (not `depth`) to render more of a truncated tree. Each `HierarchyNode` is {name, bases?, derived?, ref?}; empty `bases`/`derived` are omitted, and `ref` is present only when `true` (it is never emitted as false). SHAPE: in multi-inheritance (diamond) graphs a shared base/derived appears once in canonical form and then as ref-stubs. The FIRST occurrence of a name in DFS pre-order is the canonical node carrying the full `bases`/`derived` subtree; every SUBSEQUENT occurrence is a {name, ref: true} stub with empty `bases`/`derived`. To reconstruct the full tree, maintain a `name -> node` map keyed on the first NON-ref occurrence of each name and treat a `ref: true` node as a pointer back to that canonical entry, NOT as a leaf. A `{name}` node with NO `ref` field is walk-terminal: it is either a natural leaf or a cycle-guard halt (the two are JSON-indistinguishable) — do not resolve it against the map. A `ref: true` stub is the ONLY node you follow back to a canonical entry.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "class": {
        "description": "Class name to look up",
        "type": "string"
      },
      "depth": {
        "default": null,
        "description": "Traversal depth for transitive inheritance (default 1 = direct only)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "max_nodes": {
        "default": null,
        "description": "Maximum unique class names to include in the returned tree (default 250, max 1000). Each unique name counts once even when reached via multiple inheritance paths (diamonds), so a shared ancestor doesn't burn the budget twice. The response includes `truncated: true` and the partial tree when the budget is hit; raise this for deep hierarchies (e.g. UE's UObject).",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      }
    },
    "required": [
      "class"
    ],
    "title": "GetClassHierarchyArgs",
    "type": "object"
  }
}
