crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_coupling.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_coupling\")"
---
{
  "name": "get_coupling",
  "description": "Cross-file coupling counts for a file: how many call+include edges connect it to each other indexed source file. `direction` selects the response SHAPE: `\"outgoing\"` (DEFAULT — edges leaving `file`) or `\"incoming\"` (edges pointing into `file`) each return the {results, total, offset, limit, truncated, next_offset} envelope where each `results[i]` is {file, count} (count = number of edges between the two files). `\"both\"` returns a DIFFERENT shape: {incoming, outgoing} where each value is its own independent {results, total, offset, limit, truncated, next_offset} page — there is NO top-level `results` array in `both` mode. Accepted `direction` values are `outgoing`, `incoming`, `both`; absent/empty resolves to `outgoing`; any other spelling is a tool error. Rows are sorted by `count` descending, then `file` ascending, so the most tightly-coupled files page first and pagination is deterministic across calls. `limit` defaults to 50 per side (max 1000, clamped silently — the echoed `limit` reflects the resolved value; 0 resolves to the default); raise `limit` for highly-coupled files, or use `offset` (default 0) to page through. An unknown file is not an error — it returns empty page(s) (results: [], total: 0). Responses are capped by `[response].max_bytes` (default 100KB). For any byte-starved empty page whose `next_offset` equals the requested `offset`, treat it as a start-fresh marker, not a continuation: do not retry unchanged; raise `[response].max_bytes`, re-run `analyze_codebase`, then retry. In `both` mode the budget is allocated SEQUENTIALLY: the incoming page is sized first against the full budget, then the outgoing page receives only what remains after the incoming page plus a fixed wrapper reserve; if incoming consumes the whole budget the outgoing page comes back empty with `truncated:true` and `next_offset` equal to the request's resolved `offset` (a start-fresh marker, not a continuation): do not retry it unchanged; raise `[response].max_bytes`, re-run `analyze_codebase`, then retry. When `truncated` is true on either side and `next_offset` differs from the requested `offset`, that side has un-emitted rows because `limit` or the byte budget cut it — re-call with that single `direction=\"incoming\"` (or `\"outgoing\"`) and `offset = next_offset` from the truncated page to resume; `truncated=false` plus `next_offset=null` means that page is complete. `results.length` may be less than `limit` when the byte cap fires, so consult `truncated`, not length, to detect partial pages. Path is resolved against the indexed graph; `\\\\?\\` extended-path prefix is handled automatically, and relative segments (`.` / `..`) resolve against the on-disk file when it exists (otherwise lexical-only). Counts cover only edges between indexed source files: targets that do not resolve to an indexed source file (system/external headers, `.ini`/`.cfg`, `.txt`) are filtered at index time and never contribute to a count.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "direction": {
        "default": null,
        "description": "'outgoing' (default), 'incoming', or 'both'",
        "type": [
          "string",
          "null"
        ]
      },
      "file": {
        "description": "Absolute path to the source file",
        "type": "string"
      },
      "limit": {
        "default": null,
        "description": "Maximum results to return per side (default 50, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N matches for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      }
    },
    "required": [
      "file"
    ],
    "title": "GetCouplingArgs",
    "type": "object"
  }
}
