crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_dependencies.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_dependencies\")"
---
{
  "name": "get_dependencies",
  "description": "List files included/imported by the given file. Path is resolved against the indexed graph; `\\\\?\\` extended-path prefix is handled automatically, and relative segments (`.` / `..`) resolve against the on-disk file when it exists (otherwise lexical-only). Returns the {results, total, offset, limit, truncated, next_offset} envelope; each `results[i]` is {file, kind, line} where `file` is the included path, `kind` is \"includes\", and `line` is the source line of the include/import directive. Only includes that resolve to an indexed source file appear: targets that do not (system/external headers, `.ini`/`.cfg`, `.txt`, anything no language plugin claims) are filtered at index time and are absent from dependencies. Rows are sorted by (file, line) ascending so pagination is deterministic. An unknown file is not an error — it returns an empty page (results: [], total: 0). `limit` defaults to 100 (max 1000, clamped silently — the echoed `limit` reflects the resolved value); raise `limit` for files with many includes, or use `offset` to page through. Responses are also capped by `[response].max_bytes` (default 100KB); when either `limit` or the byte budget leaves records un-emitted, `truncated` is true and `next_offset` points at the first un-emitted record — re-call with `offset = next_offset` to resume. If a byte-starved page is empty and `next_offset` equals the requested `offset`, that is a start-fresh marker, not a continuation: do not retry unchanged; raise `[response].max_bytes`, re-run `analyze_codebase`, then retry. `truncated=false` plus `next_offset=null` means the page is complete. `results.length` may be less than `limit` when the byte cap fires, so consult `truncated`, not length, to detect partial pages.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "file": {
        "description": "Absolute path to the source file",
        "type": "string"
      },
      "limit": {
        "default": null,
        "description": "Max dependency rows to return (default 100, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N rows for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      }
    },
    "required": [
      "file"
    ],
    "title": "GetDependenciesArgs",
    "type": "object"
  }
}
