crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_file_symbols.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_file_symbols\")"
---
{
  "name": "get_file_symbols",
  "description": "List all symbols (functions, classes, etc.) defined in a file. Returns the {results, total, offset, limit, truncated, next_offset} envelope, sorted by symbol_id ascending. `limit` defaults to 100 (max 1000, clamped silently — the echoed `limit` reflects the resolved value); raise `limit` for wider pages on large files (UE generated headers can exceed 100), and use `offset` to advance through results. `top_level_only` (default false) drops nested methods/types. `brief` (default true) omits signature, column, and end_line; set false for full detail when investigating a specific symbol. `count_only=true` returns the match total with an empty `results` array in a < 1KB bounded response — use it for sizing queries before paging. Responses are also capped by `[response].max_bytes` (default 100KB); when either `limit` or the byte budget leaves records un-emitted, `truncated` is true and `next_offset` points at the first un-emitted record — re-call with `offset = next_offset` to resume. If a byte-starved page is empty and `next_offset` equals the requested `offset`, that is a start-fresh marker, not a continuation: do not retry unchanged; raise `[response].max_bytes`, re-run `analyze_codebase`, then retry. `truncated=false` plus `next_offset=null` means the page is complete. `results.length` may be less than `limit` when the byte cap fires, so consult `truncated`, not length, to detect partial pages. Path is resolved against the indexed graph; `\\\\?\\` extended-path prefix is handled automatically, and relative segments (`.` / `..`) resolve against the on-disk file when it exists (otherwise lexical-only).",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "brief": {
        "default": null,
        "description": "Omit signature, column, end_line for compact output (default true)",
        "type": [
          "boolean",
          "null"
        ]
      },
      "count_only": {
        "default": null,
        "description": "Return only the match count, no records (default false). Bounded response < 1KB regardless of match scale.",
        "type": [
          "boolean",
          "null"
        ]
      },
      "file": {
        "description": "Absolute path to the source file",
        "type": "string"
      },
      "limit": {
        "default": null,
        "description": "Maximum results to return (default 100, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N matches for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "top_level_only": {
        "default": null,
        "description": "Only return top-level symbols (no nested methods/types) (default false)",
        "type": [
          "boolean",
          "null"
        ]
      }
    },
    "required": [
      "file"
    ],
    "title": "GetFileSymbolsArgs",
    "type": "object"
  }
}
