crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_job_status.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_job_status\")"
---
{
  "name": "get_job_status",
  "description": "Return the status for one long-running job by required `job_id`. Response is the bare generic `{ job_id, status, path, force, started_at, finished_at, progress, progress_total, progress_message, error, result, current_phase, kind, ...community_args }` JobView — not a Page or wrapper. `path` and `force` retain their existing top-level analyze meaning; `kind` is additive (`\"analyze\"` or `\"detect_communities\"`), and optional `granularity`, `max_iterations`, `members_per_community`, `limit`, and `offset` appear only for community jobs. Use this as the primary polling/retrieval endpoint after `analyze_codebase_async` or `detect_communities_async`: status is `\"queued\"`, `\"running\"`, `\"completed\"`, or `\"failed\"`. An analyze terminal `result` is byte-identical to its synchronous success body. A community terminal `result` has the same `DetectCommunitiesResponse` shape and semantics as sync, but the JobView wrapper reserves bytes from captured `max_bytes`, so it can contain fewer rows and a different `next_offset`; resume with `offset = next_offset`, except empty `results` with `truncated=true` and `next_offset` equal to the requested `offset` is a start-fresh marker: do NOT retry unchanged; raise `[response].max_bytes`, rerun `analyze_codebase` to refresh cached config, then retry. Terminal `error` carries failures. Queued/running jobs remain addressable, and displaced terminal jobs are retained up to 32 entries; unknown or expired IDs are tool errors. Use `get_status` instead for the current job and FIFO queue diagnostics.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "job_id": {
        "description": "Required long-running job identifier returned by an async kickoff",
        "type": "string"
      }
    },
    "required": [
      "job_id"
    ],
    "title": "GetJobStatusArgs",
    "type": "object"
  }
}
