crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_orphans.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_orphans\")"
---
{
  "name": "get_orphans",
  "description": "Find symbols with no incoming call edges (uncalled functions/methods). Returns the {results, total, offset, limit, truncated, next_offset} envelope, sorted by symbol_id ascending. `limit` defaults to 20 (max 1000, clamped silently — the echoed `limit` reflects the resolved value); the default is small because orphan lists are typically explored interactively. Raise `limit` for wider scans, use `offset` to advance through pages, or filter by `kind` (function, method, class, struct, enum, typedef, interface, trait) to narrow the scope. `brief` (default true) omits signature, column, and end_line for token efficiency; set false for full detail. `count_only=true` returns the orphan total with an empty `results` array in a < 1KB bounded response — use it to size the orphan set before paging. Responses are also capped by `[response].max_bytes` (default 100KB); when either `limit` or the byte budget leaves records un-emitted, `truncated` is true and `next_offset` points at the first un-emitted record — re-call with `offset = next_offset` to resume. If a byte-starved page is empty and `next_offset` equals the requested `offset`, that is a start-fresh marker, not a continuation: do not retry unchanged; raise `[response].max_bytes`, re-run `analyze_codebase`, then retry. `truncated=false` plus `next_offset=null` means the page is complete. `results.length` may be less than `limit` when the byte cap fires, so consult `truncated`, not length, to detect partial pages.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "brief": {
        "default": null,
        "description": "Omit signature, column, end_line (default true)",
        "type": [
          "boolean",
          "null"
        ]
      },
      "count_only": {
        "default": null,
        "description": "Return only the match count, no records (default false). Bounded response < 1KB regardless of match scale.",
        "type": [
          "boolean",
          "null"
        ]
      },
      "kind": {
        "default": null,
        "description": "Filter by symbol kind: function, method (default: all callables)",
        "type": [
          "string",
          "null"
        ]
      },
      "limit": {
        "default": null,
        "description": "Maximum results to return (default 20, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N matches for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "reliability": {
        "default": null,
        "description": "Reliability filter: 'all' (default) returns every orphan including known false-positive classes; 'high' drops virtual methods (often reached via dynamic dispatch the resolver doesn't track) and macro-synthesized symbols (the macro IS the call site by construction); 'very_high' additionally drops (a) templated definitions (C++ functions/methods nested under a `template_declaration` ancestor, including methods of a templated class — the symbol carries a `/* template */` signature prefix), (b) any symbol with at least one incoming Calls edge of any confidence (catches candidates whose only callers are heuristic-resolution or bare-token unresolved-source edges), (c) C++ operator overloads (`operator<`, `operator==`, `operator()`, etc. — invoked implicitly by STL containers and language built-ins; gated on Language::Cpp so a Python or Rust `operator` identifier doesn't trip it), and (d) constructors in languages whose syntactic constructor name equals the class name (C++/Java/C#; Rust uses `new()` by convention and is NOT gated, Python uses `__init__`). 'high' typically cuts the orphan count by ~half on engine-style codebases; 'very_high' commonly cuts by 80-95%. Use 'very_high' for dead-code investigations on UE-scale codebases. Invalid values are rejected with a tool error.",
        "type": [
          "string",
          "null"
        ]
      },
      "subtree": {
        "default": null,
        "description": "Restrict the search to symbols whose file path is at or under this directory prefix. Walks the path-trie's subtree iterator — O(symbols under prefix), independent of total graph size. Absent / empty value searches the whole graph.",
        "type": [
          "string",
          "null"
        ]
      }
    },
    "title": "GetOrphansArgs",
    "type": "object"
  }
}
