crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_status.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_status\")"
---
{
  "name": "get_status",
  "description": "Operational diagnostic — returns a JSON object describing the running server: binary git SHA (with `-dirty` suffix for working-tree builds), package version, release-vs-debug build flag, discovered `.code-graph.toml` path (or null), active `[cpp].macro_strip` / `[cpp].macro_strip_with_args` counts, indexed project root, graph stats (files/symbols/edges), and the timestamp of the most recent analyze_codebase + whether it was force-rebuilt. No side effects, no locks held across I/O — safe to call from any client at any time. Use this to verify which build is actually running before debugging behaviour, and to confirm config discovery picked up the toml you expected. When an analyze is in flight or recently terminated, `analyze_job` carries `{ job_id, status, path, force, started_at, finished_at, progress, progress_total, progress_message, error?, result?, current_phase }`. `current_phase` names the indexing phase the worker is currently in: `\"loading_cache\"` (rkyv archive deserialize — can take minutes on multi-GB caches; skipped when `force=true` and the invocation scope is the entire project root), `\"discovering\"` (file-walk), `\"parsing\"` (per-file tree-sitter parse + extract — the dominant phase), `\"resolving\"` (cross-file edge resolution), `\"persisting\"` (cache write), `\"completed\"` (terminal indicator stamped atomically with `status: \"completed\"` — a polling client can read either field alone to detect successful terminal). Failed jobs intentionally retain their last in-flight phase so `current_phase + error` together localize where the failure happened. It is independent of `status` and stays as a historical value on terminal jobs (the phase that was active when the worker reached terminal); for terminal liveness use `status` not `current_phase`. Emits explicit `null` until the worker enters its first phase. `analyze_job` remains the single current/running job; FIFO-admitted waiting jobs are exposed only by `analyze_job_pending_count` and `analyze_job_pending_ids` (in promotion order). A queued job's kickoff response reports `status: \"queued\"`; queued jobs do not have full views in this response. Use `get_job_status(job_id)` as the primary per-job polling/retrieval endpoint for queued, running, and terminal jobs; this tool remains the current-slot and queue diagnostic. `analyze_job_previous_terminal` carries the prior terminal job for exactly one grace-window rotation. Both job-view fields are `null` before any analyze has ever run, and emit explicit `null` (not absent) so clients can distinguish \"no analyze ever\" from \"missing field on an old server\".",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "description": "Empty parameter struct for tools that take no arguments\n(`detect_cycles`, `watch_start`, `watch_stop`). The empty `{}` JSON\nobject deserializes into this without error.",
    "title": "EmptyParams",
    "type": "object"
  }
}
