crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_symbol_at.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_symbol_at\")"
---
{
  "name": "get_symbol_at",
  "description": "Find the symbol(s) whose source span encloses a given file+line — e.g. 'what function/method is at file X, line N'. NOT goto-definition: it does not resolve the identifier written at that position to its binding (scope resolution is out of scope for this tool); it answers 'what encloses this line' purely by span containment (line is between a symbol's `line` and `end_line`). Enclosure is LINE-granular, not column-granular — symbols carry no end column, so if two symbols share the same starting line (e.g. a one-line method and its enclosing one-line class), both match. Returns the `Page<EnclosingSymbol>` envelope {results, total, offset, limit, truncated, next_offset}, where each row is {symbol_id, name, kind, line, end_line, span_lines, parent, namespace}. Results are ordered innermost-first (smallest `span_lines` ascending, then `line` descending, then `symbol_id` ascending) — a method nested in a class returns the method before the class. `file` is an absolute path resolved against the indexed graph (`\\\\?\\` extended-path prefix handled automatically, relative `.`/`..` segments resolved against the on-disk file when it exists); an unknown file is a tool error naming the path. `line` is 1-based and REQUIRED; `line = 0` is a tool error (very likely an off-by-one bug, not silently clamped). A line enclosed by no symbol returns SUCCESS with an empty `Page` (results: [], total: 0) — never an error and never a nearest-symbol guess. `limit` defaults to 100 (max 1000, clamped silently — the echoed `limit` reflects the resolved value); raise `limit` for deeply-nested spans, or use `offset` to page through. Responses are also capped by `[response].max_bytes` (default 100KB); when matching records remain because the count limit or byte budget stops the page, `truncated` is true and `next_offset` points at the first un-emitted record — re-call with `offset = next_offset` to resume. `truncated=false` plus `next_offset=null` means the page is complete. An empty `results` page with `truncated=true` and `next_offset` equal to the requested `offset` is a start-fresh marker: do NOT retry unchanged; raise `[response].max_bytes`, rerun `analyze_codebase` to refresh cached config, then retry.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "file": {
        "description": "Absolute path to the source file",
        "type": "string"
      },
      "limit": {
        "default": null,
        "description": "Maximum enclosing symbols to return (default 100, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "line": {
        "description": "1-based source line. 0 is rejected as a tool error (likely off-by-one).",
        "format": "uint32",
        "minimum": 0,
        "type": "integer"
      },
      "offset": {
        "default": null,
        "description": "Skip first N matches for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      }
    },
    "required": [
      "file",
      "line"
    ],
    "title": "GetSymbolAtArgs",
    "type": "object"
  }
}
