crates/code-graph-tools/tests/snapshots/snapshot_tools_list__tools_list_get_symbol_summary.snap
---
source: crates/code-graph-tools/tests/snapshot_tools_list.rs
expression: "tool_entry(\"get_symbol_summary\")"
---
{
  "name": "get_symbol_summary",
  "description": "Get symbol counts grouped by namespace and kind — useful for codebase orientation. Returns a `Page<SummaryRow>` envelope: {results, total, offset, limit, truncated, next_offset}, where each row is `{namespace, kind, count}`. NOTE on `<global>`: rows with `namespace == \"<global>\"` are a display label for the empty namespace (symbols defined at global scope). `search_symbols` cannot currently filter to global-scope symbols only — its `namespace` field is a case-insensitive substring filter where the empty string means \"no filter\", so `search_symbols(namespace=\"\")` returns all symbols rather than only global-scope ones. To investigate global-scope symbols, use this tool to confirm they exist, then inspect them via `search_symbols` with other filters (e.g., by `kind` or `query`). Rows are sorted by `(namespace, kind)` ascending so paging is deterministic across calls. `limit` defaults to 100 (max 1000, clamped silently — the echoed `limit` reflects the resolved value); raise `limit` for more rows per page on large codebases with many distinct namespaces. `offset` defaults to 0; raise `offset` to skip past previous results. `count_only=true` returns the sentinel page with `total` = the `(namespace, kind)` pair count (NOT the sum of individual symbols) and an empty `results` array in a < 1KB bounded response — use it to size the row set before paging. Responses are also capped by `[response].max_bytes` (default 100KB); when matching rows remain because the count limit or byte budget stops the page, `truncated` is true and `next_offset` points at the first un-emitted row — re-call with `offset = next_offset` to resume. `truncated=false` plus `next_offset=null` means the page is complete. An empty `results` page with `truncated=true` and `next_offset` equal to the requested `offset` is a start-fresh marker: do NOT retry unchanged; raise `[response].max_bytes`, rerun `analyze_codebase` to refresh cached config, then retry. `results.length` may be less than `limit` when the byte cap fires, so consult `truncated`, not length, to detect partial pages.",
  "inputSchema": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "properties": {
      "count_only": {
        "default": null,
        "description": "Return only the row count, no records (default false). Bounded response < 1KB regardless of row scale. `total` is the (namespace, kind) pair count, NOT the sum of symbol counts.",
        "type": [
          "boolean",
          "null"
        ]
      },
      "file": {
        "default": null,
        "description": "Optional absolute path: scope counts to a single file",
        "type": [
          "string",
          "null"
        ]
      },
      "limit": {
        "default": null,
        "description": "Maximum rows to return (default 100, max 1000)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      },
      "offset": {
        "default": null,
        "description": "Skip first N rows for pagination (default 0)",
        "format": "uint32",
        "minimum": 0,
        "type": [
          "integer",
          "null"
        ]
      }
    },
    "title": "GetSymbolSummaryArgs",
    "type": "object"
  }
}
